# recruitcrm-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  TODO.md  WINDOWS_PREDEPLOY.md  install.ps1  install.sh  pyproject.toml
.claude/skills/linear-cli/: SKILL.md  commands.md
.claude/skills/review-pr-comments/: SKILL.md
.githooks/: commit-msg
.github/workflows/: ci.yml  publish-prerelease.yml  publish.yml
docs/: SENTRY_SETUP_FOR_TEAM.md
docs/api-reference/: README.md  add-education-history.md  add-records-to-hotlist.md  add-work-experience.md  apply-to-job.md  assign-candidate.md  assigned-candidates-for-job.md  authentication.md  candidate-education-history.md  candidate-history.md  candidate-work-experience.md  create-email-draft.md  creates-a-new-call-log.md  creates-a-new-candidate.md  creates-a-new-company.md  creates-a-new-contact.md  creates-a-new-deal.md  creates-a-new-hotlist.md  creates-a-new-invoice.md  creates-a-new-job.md  creates-a-new-meeting.md  creates-a-new-note.md  creates-a-new-subscription.md  creates-a-new-task.md  custom-field-search.md  delete-a-call-log.md  delete-a-candidate-education-history.md  delete-a-candidate-work-experience.md  delete-a-candidate.md  delete-a-company.md  delete-a-contact.md  delete-a-deal.md  delete-a-hotlist.md  delete-a-job.md  delete-a-meeting.md  delete-a-note.md  delete-a-placement.md  delete-a-subscription.md  delete-a-task.md  delete-an-invoice.md  (+148 more)
docs/api-reference/_work/: build_readme.py  failed.txt  rescrape.py  rescrape_urls.txt  retry.py  retry_urls.txt  save_manual.py  scrape.py  tidy.py  todo_urls.txt
scripts/: fetch_api_docs.py  smoke.py
src/recruit_crm_mcp/: __init__.py  __main__.py  client.py  install.py  models.py  server.py  telemetry.py
tests/: test_client.py  test_server.py
tests/integration/: _sweep.py  conftest.py  test_api.py  test_calendar_invites.py  test_update_roundtrips.py  test_write_variants.py
tests/mcp/: conftest.py  test_schema.py  test_write_tools.py  test_write_tools_live.py
tests/unit/: conftest.py  test_client.py  test_install.py  test_models.py  test_report_issue.py  test_server.py  test_telemetry.py
