[project]
name = "recruit-crm-mcp"
version = "0.1.0"
description = "MCP server for Recruit CRM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
recruit-crm-mcp = "recruit_crm_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recruit_crm_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-dotenv>=0.5.2",
    "anyio[trio]>=4.0",
    "pytest-anyio>=0.0.0",
    "ruff>=0.9.0",
]

[tool.ruff]
src = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: tests that hit the live Recruit CRM API"]
