[project]
name = "recruit-crm-mcp"
version = "0.1.0"
description = "MCP server for Recruit CRM"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/ebragas/recruitcrm-mcp"
Repository = "https://github.com/ebragas/recruitcrm-mcp"
Issues = "https://github.com/ebragas/recruitcrm-mcp/issues"

[project.scripts]
recruit-crm-mcp = "recruit_crm_mcp.server:main"
recruit-crm-mcp-install = "recruit_crm_mcp.install:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recruit_crm_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-dotenv>=0.5.2",
    "anyio[trio]>=4.0",
    "pytest-anyio>=0.0.0",
    "ruff>=0.9.0",
]

[tool.ruff]
src = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: tests that hit the live Recruit CRM API"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
commit_message = "chore(release): {version}"
changelog_file = "CHANGELOG.md"
upload_to_vcs_release = true
